--- a/src/Editor/Editor.csproj
+++ b/src/Editor/Editor.csproj
@@ -4,50 +4,18 @@
     <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == '' And '$(OS)' == 'Unix'">ubuntu.16.04-x64</RuntimeIdentifier>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RuntimeIdentifiers>win7-x64;ubuntu.14.04-x64;ubuntu.16.04-x64;osx.10.10-x64</RuntimeIdentifiers>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <ProjectGuid>{AE9BC745-284F-569F-82AA-C43AB9425DF2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AssemblyName>Editor</AssemblyName>
     <RootNamespace>Engine</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
-    <PackageTargetFallback>portable-net45+win8+wpa81</PackageTargetFallback>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="EditorUtility.cs" />
-    <Compile Include="Editor\ArrowPointerModel.cs" />
-    <Compile Include="Editor\AssetMenuHandler.cs" />
-    <Compile Include="Editor\CommandLineOptions.cs" />
-    <Compile Include="Editor\Commands\CreateGameObjectCommand.cs" />
-    <Compile Include="Editor\Commands\RawCommand.cs" />
-    <Compile Include="Editor\Commands\SetValueActionCommand.cs" />
-    <Compile Include="Editor\Commands\Command.cs" />
-    <Compile Include="Editor\Commands\CompoundCommand.cs" />
-    <Compile Include="Editor\Commands\ReflectionSetCommand.cs" />
-    <Compile Include="Editor\EditorAssetSystem.cs" />
-    <Compile Include="Editor\EditorDrawer.cs" />
-    <Compile Include="Editor\EditorEmbeddedAssets.cs" />
-    <Compile Include="Editor\EditorPreferences.cs" />
-    <Compile Include="Editor\Drawers.cs" />
-    <Compile Include="Editor\AssetRefDrawer.cs" />
-    <Compile Include="Editor\EditorBehavior.cs" />
-    <Compile Include="Editor\EditorCameraMovement.cs" />
-    <Compile Include="Editor\EditorSceneLoaderSystem.cs" />
-    <Compile Include="Editor\EditorSystem.cs" />
-    <Compile Include="Editor\Graphics\AxesRenderer.cs" />
-    <Compile Include="Editor\InMemoryAsset.cs" />
-    <Compile Include="Editor\ProjectPublisher.cs" />
-    <Compile Include="Editor\TextureDrawer.cs" />
-    <Compile Include="Editor\UndoRedoStack.cs" />
-    <Compile Include="Editor\Preferences.cs" />
-    <Compile Include="Editor\Program.cs" />
-    <Compile Include="ListDrawer.cs" />
-    <Compile Include="PrefabAssetHandler.cs" />
-    <Compile Include="ProjectContext.cs" />
-  </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Windows_Debug|x64' " />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Windows_Release|x64' " />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ubuntu_Debug|x64' " />
@@ -112,24 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SharpDX.XAudio2" Version="3.0.2" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.2.0" />
-    <PackageReference Include="System.Collections.Generic.MultiValueDictionary" Version="0.1.0-e160604-1" />
-    <PackageReference Include="System.Console" Version="4.3.0" />
-    <PackageReference Include="System.Diagnostics.Debug" Version="4.3.0" />
-    <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
-    <PackageReference Include="System.Globalization" Version="4.3.0" />
-    <PackageReference Include="System.Linq" Version="4.3.0" />
-    <PackageReference Include="System.Net.Primitives" Version="4.3.0" />
-    <PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
-    <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
-    <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-    <PackageReference Include="System.Threading" Version="4.3.0" />
-    <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
-    <PackageReference Include="System.CommandLine" Version="0.1.0-e160908-1" />
-    <PackageReference Include="Microsoft.Win32.Registry" Version="4.3.0" />
-    <PackageReference Include="Microsoft.NETCore.DotNetHostPolicy" Version="1.1.0" />
-    <PackageReference Include="Microsoft.NETCore.Runtime.CoreCLR" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Experimental.Collections" Version="1.0.6-e190117-3" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
   </ItemGroup>
   <Import Project="$(MSBuildThisFileDirectory)Editor.targets" />
 </Project>
